			   XPCE ChangeLog
			   ==============


VERSION 6.6.12, distributed with SWI-Prolog 5.6.12
==================================================

* FIXED: compatibility problem in saved text_buffer objects between version
  5.4.7 and 5.6.13.  Tom Conlon.  There is still an issue.  While providing
  Unicode support the save format was changed, but the version was not
  incremented.  Unfortunately there is no other way to distinguish the old
  format from the new.  Therefore, 6.6.14 can read files produced by itself
  and pre-unicode versions, but not produced by unicode versions < 6.6.14.
  Files containing only ASCII characters (<128) are compatible.


VERSION 6.6.12, distributed with SWI-Prolog 5.6.12
==================================================

* ENHANCED: `text_buffer->for_all_fragments' to avoid use of alloca() for
  large number of arguments.  Patchwork for problems in Windows with limited 
  stack-sizes.  Pierpaolo Bernardi.


VERSION 6.6.11, distributed with SWI-Prolog 5.6.11
==================================================

* FIXED: Bug#82: various issues in gemetry management.

* MODIFIED: PceEmacs/editor: ->delete_blank_lines (^X^O) is now GNU-Emacs
  compatible.  Pierpaolo Bernardi.

* FIXED: PceEmacs: C-hk (describe-key) using \C-c or \C-x prefix keys.
  Pierpaolo Bernardi.

* FIXED: library(tabular): avoid sending ->margin to objects with a
  different interpretation.

* FIXED: PceEmacs: Preserve kill-location over marking variables.
  Also fixed repeating undo using ^Xu.  Pierpaolo Bernardi.

VERSION 6.6.10, distributed with SWI-Prolog 5.6.10
==================================================

* FIXED: Use current monitor for placement rather than display as a whole.

* ADDED: `display<-pointer_location'.

* FIXED: X11 version: frame->gemetry offset for open windows.

* ADDED: @monitor to frame->geometry specification.  Also added an extra
  monitor argument to most of the frame dimension methods.  Work in progress