@@ -2,6 +2,8 @@
 			   ==============
 
 
+* FIXED: PceEmacs: Backspace in incremental search.
+
 VERSION 6.6.12, distributed with SWI-Prolog 5.6.12
 ==================================================
 
